--- a/src/main/webapp/css/authenticationAccount.css
+++ b/src/main/webapp/css/authenticationAccount.css
@@ -28,7 +28,15 @@
     display: inline-block;
     width: 200px;
 }
-
+.content-file-box{
+    width: 900px;
+    height:150px;
+    border: 1px solid #e9ebee;
+    outline: none;
+    color: #60606c;
+    font-size: 14px;
+    padding-left: 10px;
+}
 .right-content .content-input-box .content-input {
     width: 300px;
     height: 38px;
@@ -38,7 +46,15 @@
     font-size: 14px;
     padding-left: 10px;
 }
-
+.content-file
+{
+    width: 300px;
+    height: 38px;
+    border: 1px solid #e9ebee;
+    color: #60606c;
+    font-size: 14px;
+    padding-left: 10px;
+}
 .right-content .content-input-box .content-input-radio {
     display: inline-block;
     width: 150px;
