--- a/src/main/webapp/css/common/common.css
+++ b/src/main/webapp/css/common/common.css
@@ -3,7 +3,10 @@
     width: 1214px;
     margin: 0 auto;
 }
-
+.footer-container{
+    width: 1214px;
+    margin: 0 auto;
+}
 .red-text {
     color: #ff0000;
 }
@@ -76,13 +79,29 @@
 }
 
 .public-footer {
-    height: 58px;
+    height: 47px;
+
     background-color: #1b2b3b;
+    font-size: 13px;
+    text-align: center;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+
+    z-index: 9999;
 }
 
 .public-footer .copyright-text {
     color: #6985a5;
     font-size: 13px;
+    padding: 10px;
     text-align: center;
-    line-height: 58px;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 50px;
+    z-index: 9999;
+
 }
