--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -8,7 +8,31 @@
     background-position: center center;
     background-repeat: no-repeat;
 }
+.hotbox{
+    position: absolute;
+    left: 150px;
+}
+.hotTiltle
+{
+    font-size: 40px;
+}
+.hotfont{
+    color: #93939e;
+}
+.hotcar{
 
+    font-size: 16px;
+    padding: 20px;
+    margin: 10px;
+    background: #F8F8F8;
+    height: 240px;
+    width: 400px;
+
+}
+.hotimg{
+    width: 360px;
+    height: 145px;
+}
 .index-carousel .index-choice {
     position: absolute;
     top: 50%;
